<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="14sp"
    android:paddingHorizontal="4dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_info_form"
        style="@style/MyTextView.SansSerif.Medium.Black.H5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tampak_awal_dan_akhir_jembatan"
        app:layout_constraintTop_toTopOf="parent"
        tools:ViewBindingIgnore="true"/>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_info_form"
        tools:listitem="@layout/image_item_layout"
        tools:itemCount="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_choose_file"
        style="@style/BtnChooseStyle"
        android:layout_marginTop="13dp"
        android:text="@string/choose_file"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/rv_images"
        app:layout_constraintStart_toStartOf="@id/rv_images"
        tools:ignore="SmallSp,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_choose_drone_camera"
        style="@style/BtnChooseStyle"
        android:text="@string/drone_camera"
        android:textSize="10sp"
        android:includeFontPadding="true"
        android:paddingHorizontal="12dp"
        android:layout_marginStart="14dp"
        app:layout_constraintTop_toTopOf="@id/btn_choose_file"
        app:layout_constraintBottom_toBottomOf="@id/btn_choose_file"
        app:layout_constraintStart_toEndOf="@id/btn_choose_file"
        tools:ignore="SmallSp,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_choose_camera"
        style="@style/BtnChooseStyle"
        android:text="@string/camera"
        android:textSize="10sp"
        android:includeFontPadding="true"
        android:paddingHorizontal="12dp"
        android:layout_marginStart="14dp"
        app:layout_constraintTop_toTopOf="@id/btn_choose_drone_camera"
        app:layout_constraintBottom_toBottomOf="@id/btn_choose_drone_camera"
        app:layout_constraintStart_toEndOf="@id/btn_choose_drone_camera"
        tools:ignore="SmallSp,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_note_info"
        style="@style/MyTextView.SansSerif.Medium.Black.H5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/catatan"
        tools:viewBindingIgnore="true"
        app:layout_constraintTop_toBottomOf="@id/btn_choose_file"
        app:layout_constraintStart_toStartOf="@id/btn_choose_file"
        app:layout_constraintEnd_toEndOf="@id/rv_images"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_name"
        style="@style/EditTextFormStyle.rad10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="8dp"
        android:textAlignment="viewStart"
        android:gravity="top|start"
        android:minLines="4"
        app:layout_constraintEnd_toEndOf="@id/tv_note_info"
        app:layout_constraintStart_toStartOf="@id/tv_note_info"
        app:layout_constraintTop_toBottomOf="@id/tv_note_info"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>