<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:strokeWidth="0dp"
    app:contentPadding="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_info"
            style="@style/MyTextView.SansSerif.Medium.Black.H1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drone_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_server_ip"
            style="@style/MyTextView.SansSerif.Medium.Black.H1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_info"
            android:layout_marginTop="36dp"
            android:text="@string/server_ip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_server_ip"
            style="@style/EditTextFormStyle.Grey.rad10"
            android:layout_width="186dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="28dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp"
            android:maxLines="1"
            android:inputType="text"
            android:maxLength="50"
            app:layout_constraintTop_toBottomOf="@id/tv_server_ip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_connect"
            style="@style/BtnConnectStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/connect"
            android:layout_marginTop="46dp"
            app:layout_constraintTop_toBottomOf="@id/et_server_ip"
            app:layout_constraintStart_toStartOf="@id/et_server_ip"
            app:layout_constraintEnd_toEndOf="@id/et_server_ip"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>