<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.home.otherview.DetailFragment"
    android:scrollbarSize="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="128dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="87dp"
            android:layout_height="87dp"
            android:layout_marginHorizontal="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            tools:viewBindingIgnore="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name"
            style="@style/MyTextView.SansSerif.Medium.Black.H3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:text="Jembatan Siti Nurbaya"
            tools:viewBindingIgnore="true" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:strokeColor="@color/white"
            app:contentPadding="10dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:viewBindingIgnore="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/container_image"
                    android:layout_width="146dp"
                    android:layout_height="97dp"
                    app:cardCornerRadius="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@color/white_100"
                    tools:viewBindingIgnore="true">

                    <ImageView
                        android:id="@+id/iv_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/jembatan_siti_nurbaya" />
                </com.google.android.material.card.MaterialCardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_last_inspection_date"
                    style="@style/MyTextView.SansSerif.Medium.Grey.H7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toEndOf="@id/container_image"
                    app:layout_constraintTop_toTopOf="@id/container_image"
                    android:text="@string/pemeriksaan_terakhir_1_s" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_number_info"
                    style="@style/MyTextView.SansSerif.Medium.Black.H7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Nomor Jembatan"
                    app:layout_constraintStart_toStartOf="@id/container_image"
                    app:layout_constraintTop_toBottomOf="@id/container_image"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_national_number"
                    style="@style/MyTextView.SansSerif.Medium.Black.H8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="4dp"
                    app:layout_constraintStart_toStartOf="@id/tv_number_info"
                    android:text="@string/_1_ruas_jalan_nasional_dan_provinsi_100"
                    app:layout_constraintTop_toBottomOf="@id/tv_number_info"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_city_number"
                    style="@style/MyTextView.SansSerif.Medium.Black.H8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/_2_ruas_jalan_kabupaten_dan_kota_122"
                    app:layout_constraintTop_toBottomOf="@id/tv_national_number"
                    app:layout_constraintStart_toStartOf="@id/tv_national_number"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_toll_number"
                    style="@style/MyTextView.SansSerif.Medium.Black.H8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/_3_ruas_jalan_tol_122"
                    app:layout_constraintTop_toBottomOf="@id/tv_city_number"
                    app:layout_constraintStart_toStartOf="@id/tv_city_number"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_build_date"
                    style="@style/MyTextView.SansSerif.Medium.Black.H7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tanggal_pembangunan_12_10_2020"
                    app:layout_constraintStart_toStartOf="@id/tv_number_info"
                    app:layout_constraintTop_toBottomOf="@id/tv_toll_number"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_adress"
                    style="@style/MyTextView.SansSerif.Medium.Black.H7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/alamat_1_s"
                    app:layout_constraintStart_toStartOf="@id/tv_build_date"
                    app:layout_constraintTop_toBottomOf="@id/tv_build_date"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_province_city"
                    style="@style/MyTextView.SansSerif.Medium.Black.H7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/provinsi_kabupaten_kota_1_s"
                    app:layout_constraintStart_toStartOf="@id/tv_adress"
                    app:layout_constraintTop_toBottomOf="@id/tv_adress"/>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_length"
                    style="@style/MyTextView.SansSerif.Medium.Black.H7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/panjang_jembatan_1_s"
                    app:layout_constraintStart_toStartOf="@id/tv_province_city"
                    app:layout_constraintTop_toBottomOf="@id/tv_province_city"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_wide"
                    style="@style/MyTextView.SansSerif.Medium.Black.H7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/luas_jembatan_1_s"
                    app:layout_constraintStart_toStartOf="@id/tv_length"
                    app:layout_constraintTop_toBottomOf="@id/tv_length"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_material"
                    style="@style/MyTextView.SansSerif.Medium.Black.H7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/bahan_jembatan_1_s"
                    app:layout_constraintStart_toStartOf="@id/tv_wide"
                    app:layout_constraintTop_toBottomOf="@id/tv_wide"/>
            <!--    <androidx.appcompat.widget.AppCompatTextView
                    style="@style/MyTextView.SansSerif.Medium.Black.H7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/no_jembatan_1_s"
                    app:layout_constraintTop_toBottomOf="@id/container_image"/>-->


                <!--<androidx.appcompat.widget.AppCompatTextView
                    style="@style/MyTextView.SansSerif.Medium.Black.H7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="10sp"
                    android:minLines="7"
                    android:paddingBottom="10dp"
                    app:layout_constraintTop_toBottomOf="@id/container_image"
                    android:text="Nomor Jembatan : 11234212\nTanggal Dibangun : 21/01/2021\nAlamat Jembatan : unknown name here\nPanjang : 1200 m\nLebar : 20 m\nRencana Pemeriksaan : 30/12/2023\nBahan Jembatan : Besi" />-->
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_next_check_date_info"
            style="@style/MyTextView.SansSerif.Medium.Black.H7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/pemeriksaan_nselanjutnya"
            app:layout_constraintTop_toBottomOf="@id/container_content"
            app:layout_constraintStart_toStartOf="@id/container_content"
            tools:viewBindingIgnore="true" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_next_inspection_date"
            style="@style/EditTextFormStyle.Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingVertical="6dp"
            android:paddingHorizontal="12dp"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@id/tv_next_check_date_info"
            app:layout_constraintTop_toTopOf="@id/tv_next_check_date_info"
            app:layout_constraintBottom_toBottomOf="@id/tv_next_check_date_info"
            app:layout_constraintVertical_bias="1"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ib_map"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:scaleType="centerCrop"
            android:background="@drawable/ic_map"
            app:layout_constraintEnd_toEndOf="@id/container_content"
            app:layout_constraintTop_toTopOf="@id/et_next_inspection_date"
            app:layout_constraintBottom_toBottomOf="@id/et_next_inspection_date" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_check_history_info"
            style="@style/MyTextView.SansSerif.Medium.Black.H5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/riwayat_pemeriksaan"
            app:layout_constraintTop_toBottomOf="@id/tv_next_check_date_info"
            app:layout_constraintStart_toStartOf="@id/tv_next_check_date_info"
            tools:viewBindingIgnore="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_check_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="30dp"
            android:clipToPadding="false"
            android:minHeight="64dp"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@id/tv_check_history_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            style="@style/BtnSaveStyle"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:alpha="0.6"
            android:enabled="false"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/rv_check_history"
            app:layout_constraintVertical_bias="0.8"
            tools:ignore="TouchTargetSizeCheck"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/BtnStartCheckStyle"
            android:id="@+id/btn_start_check"
            android:layout_width="wrap_content"
            android:paddingHorizontal="18dp"
            android:layout_height="26dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_save"
            app:layout_constraintEnd_toEndOf="@id/btn_save" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_empty_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sans_semi_bold"
            android:text="@string/belum_ada_pemeriksaan"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@id/rv_check_history"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@id/rv_check_history"
            app:layout_constraintStart_toStartOf="@id/rv_check_history"
            app:layout_constraintEnd_toEndOf="@id/rv_check_history"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>